--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <h1>TEST</h1>
+    <div id="topnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">Stuff</a>
+      <a href="#about">About</a>
+    </div>
+
+   <h1 id="mt">Portfolio</h1>
+   <center>
+    <h3>By Paxton Todd</h3>
+  </center>
   </body>
 </html>
