--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div id="topnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">Stuff</a>
-      <a href="#about">About</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="stuff.html">Stuff</a>
+      <a href="about.html">About</a>
     </div>
 
    <h1 id="mt">Portfolio</h1>
