--- a/stuff.html
+++ b/stuff.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div id="topnav">
-     <a href="#home">Home</a>
-     <a href="#news" class="active">Stuff</a>
-     <a href="#about">About</a>
+     <a href="index.html">Home</a>
+     <a href="stuff.html" class="active">Stuff</a>
+     <a href="about.html">About</a>
     </div>
     <div id="stuffContainer">
       <a href="">
