--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <a href="about.html" class="active">About</a>
     </div>
 
-    <div id="stuffContainer">
+    <div id="displayContainer">
       <img id="nnImg" src="https://victorzhou.com/media/nn-series/network.svg" />
       <img id="carImg" src="https://tesla-cdn.thron.com/delivery/public/image/tesla/0de77453-67b5-4f12-9dba-f0889853c4d5/bvlatuR/std/0x0/tesla-model-s-autopilot-software-70" />
       <img id="gameImg" src="https://upload.wikimedia.org/wikipedia/en/6/64/Journey_Title_Poster.png" />
