--- a/about.html
+++ b/about.html
@@ -14,18 +14,20 @@
       <a href="about.html" class="active">About</a>
     </div>
 
-    <div id="displayContainer">
-      <img id="nnImg" src="https://victorzhou.com/media/nn-series/network.svg" />
-      <img id="carImg" src="https://tesla-cdn.thron.com/delivery/public/image/tesla/0de77453-67b5-4f12-9dba-f0889853c4d5/bvlatuR/std/0x0/tesla-model-s-autopilot-software-70" />
-      <img id="gameImg" src="https://upload.wikimedia.org/wikipedia/en/6/64/Journey_Title_Poster.png" />
-      <h3>This site is a portfolio of my most valuable work done so far.</h3>
-      <ul>
-        <li>I first got interested in AI after finding videos on youtube. Because it is seen as a magical thinking algorithm, I was intrigued to learn more. After researching more videos on youtube, I was able to find a book about how to make a Neural Network from scratch, which can be found <a href="https://nnfs.io/" target="_blank">here.</a> Long story short, a Neural Network is an algorithm modeled after the human brain, which can take an input and produce an output.</li>
-        <br>
-        <li>After learning about AI, I became interested in car self driving. I researched brands like tesla and google, mainly being inspired by the road visualization system.</li>
-        <br>
-        <li>Most recently, I have been developing a game with my brother. The game is inpsired by a peacful adventure game named <a href="https://thatgamecompany.com/journey/" target="_blank">Journey.</a></li>
-      </ul>
+    <div id="flexCenter">
+      <div id="displayContainer">
+        <img id="nnImg" src="https://victorzhou.com/media/nn-series/network.svg" />
+        <img id="carImg" src="https://tesla-cdn.thron.com/delivery/public/image/tesla/0de77453-67b5-4f12-9dba-f0889853c4d5/bvlatuR/std/0x0/tesla-model-s-autopilot-software-70" />
+        <img id="gameImg" src="https://upload.wikimedia.org/wikipedia/en/6/64/Journey_Title_Poster.png" />
+        <h3>This site is a portfolio of my most valuable work done so far.</h3>
+        <ul>
+          <li>I first got interested in AI after finding videos on youtube. Because it is seen as a magical thinking algorithm, I was intrigued to learn more. After researching more videos on youtube, I was able to find a book about how to make a Neural Network from scratch, which can be found <a href="https://nnfs.io/" target="_blank">here.</a> Long story short, a Neural Network is an algorithm modeled after the human brain, which can take an input and produce an output.</li>
+          <br>
+          <li>After learning about AI, I became interested in car self driving. I researched brands like tesla and google, mainly being inspired by the road visualization system.</li>
+          <br>
+          <li>Most recently, I have been developing a game with my brother. The game is inpsired by a peacful adventure game named <a href="https://thatgamecompany.com/journey/" target="_blank">Journey.</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
